education section spacing fixed

--- a/src/App.css
+++ b/src/App.css
@@ -119,7 +119,7 @@ p.skillssection {
   font-family: 'PT Sans Caption', sans-serif;
 }
 
-h1.title1 {
+.title1 {
   margin-bottom: 1em;
   font-family: 'PT Sans Caption', sans-serif;
   color: #AA1854;
@@ -358,6 +358,21 @@ p.skillssection {
   align-items: center;
 }
 
+
+#education.section-content {
+  margin-top: 0;
+
+}
+
+p.education {
+  margin-top: 0;
+  padding-bottom: 0;
+  margin-bottom: 2em;
+}
+
+p.backtotop {
+  margin: 2em;
+}
 
 .column {
   float: left;
